<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/slidingMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/wh_16"
    android:paddingRight="@dimen/wh_16"
    app:divider="@drawable/divider"
    app:showDividers="middle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/wh_8"
        android:layout_weight="1.0"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.sky.widget.CircleImageView
            android:id="@+id/civ_head"
            android:layout_width="@dimen/wh_144"
            android:layout_height="@dimen/wh_144"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_puzzle"
            app:borderColor="@color/green"
            app:borderWidth="@dimen/wh_4" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/civ_head"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:gravity="center"
            android:text="等级"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium" />
    </RelativeLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:divider="@drawable/divider"
        app:showDividers="middle">

        <LinearLayout
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/wh_4"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:tag="@string/qq_menu01">

            <!--<android.support.v4.widget.CircleImageView-->
            <com.sky.widget.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                app:borderColor="@color/green"
                app:borderWidth="@dimen/wh_4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawableRight="@mipmap/ic_right"
                android:text="@string/qq_menu01"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/wh_4"
            android:layout_marginTop="@dimen/wh_4"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:tag="@string/qq_menu02">

            <com.sky.widget.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                app:borderColor="@color/green"
                app:borderWidth="@dimen/wh_4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawableRight="@mipmap/ic_right"
                android:text="@string/qq_menu02"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/wh_4"
            android:layout_marginTop="@dimen/wh_4"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:tag="@string/qq_menu03">

            <com.sky.widget.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                app:borderColor="@color/green"
                app:borderWidth="@dimen/wh_4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawableRight="@mipmap/ic_right"
                android:text="@string/qq_menu03"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/wh_4"
            android:layout_marginTop="@dimen/wh_4"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:tag="@string/qq_menu04">

            <com.sky.widget.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                app:borderColor="@color/green"
                app:borderWidth="@dimen/wh_4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawableRight="@mipmap/ic_right"
                android:text="@string/qq_menu04"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/wh_4"
            android:layout_marginTop="@dimen/wh_4"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:tag="@string/qq_menu05">

            <com.sky.widget.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                app:borderColor="@color/green"
                app:borderWidth="@dimen/wh_4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawableRight="@mipmap/ic_right"
                android:text="@string/qq_menu05"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium" />
        </LinearLayout>
    </android.support.v7.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/wh_8"
        android:layout_marginTop="@dimen/wh_8"
        android:layout_weight="1.0"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/wh_4"
            android:layout_marginRight="@dimen/wh_48"
            android:text="设置"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/wh_48"
            android:text="退出"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium" />
    </LinearLayout>
</android.support.v7.widget.LinearLayoutCompat>